--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -67,6 +67,17 @@ ${parent.collapsed()}
      else:
        show = not thing.deleted
   %>
+  %if showexpandcollapse:
+    <a href="#" class="expand"
+       %if collapse:
+         onclick="return showcomment(this)">
+       %else:
+         onclick="return hidecomment(this)">
+       %endif
+       [${_("+") if collapse else unsafe(_("&ndash;"))}]
+    </a>
+  %endif
+
   %if show:
      %if thing.deleted:
        <em>${_("deleted comment from")}</em>&#32;
@@ -90,18 +101,11 @@ ${parent.collapsed()}
       <em>*</em>&nbsp;
     %endif
   %endif
-  %if showexpandcollapse:
-    <a href="#" class="expand"
-       %if collapse:
-         onclick="return showcomment(this)">
-       %else:
-         onclick="return hidecomment(this)">
-       %endif
-       [${_("+") if collapse else _("-")}]
-    %if collapse:
+  %if collapse:
+    &nbsp;<a href="#" class="expand"
+       onclick="return showcomment(this)">
        (${thing.num_children} 
         ${ungettext("child", "children", thing.num_children)})
-    %endif
     </a>
   %endif
 </%def>
