--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -90,6 +90,18 @@ reddit, reddit.com, vote, comment, submit
 </%def>
 
 <%def name="head()">
+%if g.tracker_url and thing.site_tracking:
+<script type="text/javascript">
+    $(function() {
+        var url = '${UserInfo.gen_url()}';
+        var cachebuster = Math.round(Math.random() * 2147483647);
+        var cachebusted_url = url + "&r=" + cachebuster;
+        var img = new Image();
+        img.src = cachebusted_url;
+    });
+</script>
+%endif
+
 %if g.googleanalytics and thing.site_tracking:
 <script type="text/javascript">
 
